force-app/main/default/objects/Certification_Prerequisites_Setup__c/Certification_Prerequisites_Setup__c.object-meta.xml
<CustomObject>
    <label>Competency Prerequisites Setup</label>
    <nameField>
        <displayFormat>CP-{0000000}</displayFormat>
        <label>Competency Prerequisites Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competency Prerequisites Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>