force-app/main/default/objects/Certification_Prerequisites_Setup__c/fields/Certification_Requirement_Setup__c.field-meta.xml
<CustomField>
    <fullName>Certification_Requirement_Setup__c</fullName>
    <label>Competency Requirement Setup</label>
    <referenceTo>Certification_Requirement_Setup__c</referenceTo>
    <relationshipName>Certification_Prerequisites_Setups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>