force-app/main/default/objects/Certification_Prerequisites_Setup__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Any 1</fullName>
            </value>
            <value>
                <fullName>Any 2</fullName>
            </value>
            <value>
                <fullName>Any 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>