force-app/main/default/objects/Certification_Prerequisites_Setup__c/fields/Prerequisites_Ids__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites_Ids__c</fullName>
    <label>Prerequisites_Ids</label>
    <type>TextArea</type>
</CustomField>